# fastapi-graphql

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml
fastapi_graphql/: main.py
fastapi_graphql/config/: env_setting.py
fastapi_graphql/controller/: auth.py  graphql_router.py
fastapi_graphql/model/: models.py  snowflake.py
fastapi_graphql/orm/: db.py
fastapi_graphql/services/: generic_services.py
migrations/models/: 0_20230822202119_init.py  0_20230829090500_init.py  1_20230824211922_update.py
